# abmseir

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  README.md  abseir.code-workspace  config.json  docker-compose.yml  graphStats.py  model.py  requirements.txt  snCOV.code-workspace
backend/: .coveragerc  Dockerfile  README.md  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  wait_for_postgres.py
backend/abmseir/: pyproject.toml  setup.cfg
backend/abmseir/references/feedback/: meeting_notes_03-26-21.txt
backend/abmseir/report/: state diagram.pdn
backend/abmseir/src/: setup.py
backend/abmseir/src/abmseir/: grapher.py  simulation.py  stats.py
backend/abmseir/src/abmseir/config/simulation/: paltiel_best.json
backend/abmseir/tests/: test_grapher.py
backend/abseir/: .git-blame-ignore-revs  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
backend/abseir/graphs/wattsstrogatz/: wattsstrogatz_n1500_k42_d3_rng3183065778.adjlist
backend/abseir/references/feedback/: meeting_notes_02-26-21.txt  meeting_notes_04-16-21.txt
backend/abseir/references/paltiel/: app.R  calculations.Rmd
backend/abseir/report/: horizontal_table.pdn  v1.tex
backend/abseir/src/: setup.py
backend/abseir/src/abseir/: config.py  generate_mean_csv.py  graphStats.py  grapher.py  log_handler.py  main.py  simulation.py  stats.py
backend/abseir/tests/: test_grapher.py
backend/api/: urls.py  wsgi.py
backend/api/config/: common.py  local.py  production.py
backend/api/graphs/: db_router.py  models.py  serializers.py  views.py
backend/api/graphs/migrations/: 0001_initial.py  0002_alter_circulantgraph_table_alter_completegraph_table.py  0003_circulantgraph_ak_graph_circulant_properties_and_more.py  0004_alter_circulantgraph_jumps.py  0005_alter_circulantgraph_options_and_more.py  0006_alter_circulantgraph_options.py  0007_rename_circulantgraph_circulant_and_more.py
backend/api/simulations/: jobs.py  models.py  serializers.py  views.py
backend/api/simulations/migrations/: 0001_initial.py  0002_auto_20220715_0620.py  0003_remove_parameters_ak_simulation_parameters_unique_and_more.py  0004_alter_data_cycle_index_alter_data_population_id_and_more.py  0005_rename_population_id_data_population_and_more.py  0006_alter_data_options_alter_population_options_and_more.py  0007_alter_data_options_alter_instance_options_and_more.py  0008_alter_parameters_unique_together_and_more.py  0009_alter_parameters_sample_size.py  0010_alter_parameters_r0_alter_parameters_sample_size_and_more.py  0011_instance_graph_id_instance_graph_type.py  0012_alter_instance_graph_id_alter_instance_graph_type.py  0013_alter_instance_graph_id.py  0014_alter_parameters_unique_together_and_more.py
backend/api/users/: views.py
backend/api/users/migrations/: 0001_initial.py
backend/docs/: index.md
config/: base.json
config/simulation/: distributed.json  paltiel.json  paltiel_best.json
edgelists/: WattsStrogatz_n1500-k43-d3.edgelist  WattsStrogatz_n1500-k43-d6.edgelist
feedback/: final_feedback.txt  meeting_notes_02-05-21.txt  meeting_notes_1-22-21.txt  questions_for_next_meeting_1-22-21.txt
frontend/: .env  .eslintrc.json  Dockerfile  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
graphs/: regular_n1500_k42.adjlist  wattsstrogatz_n1500_k42_d3_rng2749075981.adjlist  wattsstrogatz_n1500_k42_d3_rng2749282822.adjlist  wattsstrogatz_n1500_k42_d3_rng2801887459.adjlist  wattsstrogatz_n1500_k43_d3_rng0.edgelist
references/: app.R
references/paltiel/: app.R  (+3 more)
report/: v1.tex
src/: client.py  config.py  distributed_common.py  generate_mean_csv.py  graphStats.py  graph_handler.py  interface.py  log_handler.py  main.py  server.py  simulation.py  stats copy.py  stats.py  worker.py
(+40 files in other folders)
