[flake8]
max-line-length = 160

[metadata]
name = abmseir
version = 0.1.0
author = Jordan Williams
author_email = jwilliams4465@gmail.com
description = Simulates the SEIR model using an individual agent model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheAfroOfDoom/Small-world-Network-COVID-Simulator
project_urls =
    Bug Tracker = https://github.com/TheAfroOfDoom/Small-world-Network-COVID-Simulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.extras_require]
testing =
    pytest>=7.1.1

[options.packages.find]
where = src

[options.package_data]
abmseir = py.typed
