[tool.poetry]
name = "abseir"
version = "0.2.0"
description = "An agent-based approach to simulating epidemiological compartmental models"
authors = ["TheAfroOfDoom <tehafroofdoom@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
networkx = "2.8.5"
numpy = "1.23.1"
pandas = "1.4.3"
setuptools = "58.0.0"
win32_setctime = "1.1.0"
pytest = "^7.1.2"


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[tool.black]
target-version = ['py39']


[tool.pytest.ini_options]
addopts = "--cov=abseir"
testpaths = [
	"tests",
]
