[flake8]
max-line-length = 160

[metadata]
name = abseir
version = 0.2.0
author = TheAfroOfDoom
author_email = theafroofdoom@gmail.com
description = Agent-based SEIR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheAfroOfDoom/abseir
project_urls =
    Bug Tracker = https://github.com/TheAfroOfDoom/abseir/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.extras_require]
testing =
    pytest>=7.1.1

[options.packages.find]
where = src

[options.package_data]
abseir = py.typed
